gulp開発環境をインストールしました。

--- a/開発用/package.json
+++ b/開発用/package.json
@@ -11,5 +11,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.64.2"
+  },
+  "dependencies": {
+    "gulp": "^4.0.2"
   }
 }
